[package]
name = "syuzu_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
songbird = {version = "0.4.1", features = ["builtin-queue"]}
symphonia = {version = "0.5.2", features = ["aac", "mp3", "isomp4", "alac"]}
google-cognitive-apis = "0.2.2"


